--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,36 +20,80 @@
     <div class="body">
       <div>
         <div class="portfolio_accordeon01 unselectable_text">
-          <ul style="margin-top: 5vw; margin-left: 2vw;">
-            <li style="color: black;" class="projpers">Projets personnels</li>
+          <ul style="margin-top: 5vw;">
+            <li style="color: black; margin-left: 2vw;" class="projpers">Projets personnels</li>
             <div class="personnal">
-              <!--Rendus-->
-              <img src="../files/img/salon.webp" alt="screen_minecraft" class="projpers_files folio_img" id="body-banner">
-              <img src="../files/img/torri.webp" alt="screen_minecraft" class="projpers_files folio_img scale-50" id="body-banner">
-              <img src="../files/img/cultivateur.webp" alt="screen_minecraft" class="projpers_files folio_img scale-50" id="body-banner">
+              <!--Annonce-->
               <div>
-                <!--Vidéo de moto -->
-                <li class="align moto projpers_files" style="color: black;" >Essai d'une reproduction d'une BETA 50 RR <video class="toptxt align projpers_files folio_img scale-50" src="../files/vid/moto.mp4" alt="video-moto" autoplay loop></video></li>
+                <li class="txt_bvn align list_none projpers_files btmtxt_50" style="color: black; margin-top: 5vw; font-weight: 550;" >
+                  Bonjour et bienvenue sur mon portfolio.
+                  <br>
+                  Ci-dessous, vous trouverez quelques créations que j'ai réalisées en 3D via l'application
+                  <a class="" style="font-size: larger; font-weight: 750;" href="https://www.blender.org/"target="_blank">
+                  <img src="../files/img/blender.svg" alt="logo-blender" class="projpers_files" style="vertical-align: text-bottom; width: 8%; object-fit: cover;">.</a>
+                  </br>
+                </li>
+              </div>
+              <!--Rendus-->
+              <div>
+                <li class="align list_none projpers_files btmtxt_50" style="color: black; margin-top: 15vw;" >
+                  Salon réalisé à partir d'anciens et nouveaux modèles modélisés exprès, avec l'ajout de quelques références.
+                </li>
+                <img src="../files/img/salon.webp" alt="screen_minecraft" class="projpers_files folio_img btmtxt_75 hover_img " id="img_vid"></div>
+              <div>
+                <li class="align list_none projpers_files btmtxt_165" style="color: black; margin-top: 20vw;" >
+                  Porte Torii
+                </li>
+                <img src="../files/img/torri.webp" alt="screen_minecraft" class="projpers_files folio_img scale-50 hover_img " id="img_vid">
+              </div>
+              <!--Vidéo de moto -->
+              <div>
+                <li class="align list_none projpers_files" style="color: black;" >
+                  Essai de reproduction d'une BETA Track 50 RR
+                   <video class="toptxt align projpers_files folio_img scale-50 hover_img " src="../files/vid/moto.mp4" alt="video-moto" autoplay loop></video></li>
               </div>
               <!--Impressions-->
+              <div>
+                <li class="align list_none projpers_files btmtxt_150" style="color: black;" >
+                  Modélisation et impression d'un cultivateur agricole pour miniature 1/16.
+                </li>
+                <img src="../files/img/cultivateur_1.webp" alt="screen_minecraft" class="projpers_files folio_img scale-50 btmtxt_400 hover_img " id="img_vid">
+                <img src="../files/img/cultivateur_2.jpeg" alt="screen_minecraft" class="projpers_files folio_img scale-50 hover_img " id="img_vid">
+              </div>
               <div class="carousel1">
-                <div style="background-color: gainsboro; position: absolute; overflow: visible ;width: 100px; height: 100px; margin-block: 35vw; margin-left: 30vw; z-index: 60000!important; border-radius: 3vw; display: flex; justify-content: center; align-items: center;  "><span>Click</span></div> 
+                <div class="projpers_files" style="background-color: gainsboro; position: absolute; overflow: visible ;width: 100px; height: 100px; margin-block: 15vw; margin-left: 30vw; z-index: 60000!important; border-radius: 2vw; display: flex; justify-content: center; align-items: center;  "><span>Click</span></div> 
+                <li class="projpers_files align list_none" style="color: black;" >
+                  Modélisation et impression d'une souris verticale
+                <li class="projpers_files align btmtxt_530 list_none" style="color: black;" >
+                  avec 3 boutons supplémentaires
+                </li>
+                </li>
                 <div class="carousel">
-                  <img src="../files/img/souris_1.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="body-banner">
-                  <img src="../files/img/souris_2.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="body-banner">
+                  
+                    <img src="../files/img/souris_1.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="img_vid">
+                    <img src="../files/img/souris_2.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="img_vid">
+
                 </div>
               </div>
               <!---->
-              <img src="../files/img/hdd.jpg" alt="screen_minecraft" class="projpers_files folio_img" id="body-banner">
-              <img src="../files/img/cochon.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50" id="body-banner">
-
-                <img src="../files/img/ourson_1.png" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="body-banner">
-                <img src="../files/img/ourson_2.jpeg" alt="screen_minecraft" class="projpers_files folio_img scale-50 carousel_img" id="body-banner">
+              <li class="projpers_files align btmtxt_70 list_none" style="color: black;" >
+                Adaptateur HDD de taille lecteur DVD avec rack coulissant pour HDD
+              </li>
+              <img src="../files/img/hdd.jpg" alt="screen_minecraft" class="projpers_files folio_img hover_img " id="img_vid">
+              <li class="align list_none projpers_files btmtxt_530" style="color: black; margin-top: 25vw;" >
+                Modélisation d'une tirelire cochon sans supports pour un client
+              </li>
+                <img src="../files/img/cochon.jpg" alt="screen_minecraft" class="projpers_files folio_img scale-50 hover_img" id="img_vid">
+              <li class="align list_none projpers_files btmtxt_400" style="color: black; margin-top: 20vw;" >
+                Modélisation d'une tirelire ourson sans supports pour le même client
+              </li>
+                <img src="../files/img/ourson_1.png" alt="screen_minecraft" class="projpers_files folio_img scale-50 hover_img  btmtxt_800" id="img_vid">
+                <img src="../files/img/ourson_2.jpeg" alt="screen_minecraft" class="projpers_files folio_img scale-50 hover_img " id="img_vid">
             </div>
             <div style="margin-top: 0.5vw;"></div>
-            <li style="color: black;" class="projprof">Projets professionels</li>
+            <li style="color: black; margin-left: 2vw;" class="projprof">Projets professionels</li>
             <div class="professional">
-              <div style="width: 100vw ; height:42vw; margin-bottom: 10vw">
+              <div style="width: 100vw ; height:42vw; margin-bottom: 10vw; margin-top: 2vw;" >
                 <iframe src="../files/word/portfolio.pdf" width="80%" height="100%" class="projprof_files folio_pdf" style="margin: auto; display: block;"></iframe>
               </div>
             </div>
