--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,7 +5,6 @@
   <!--Styles et linkrel des pages -->
   <div id="heads"></div>
 
-
   <title>Arthur - PortFolio</title>
 </head>
 
@@ -21,16 +20,17 @@
   <div class="body">
     <div>
       <div class="portfolio_accordeon01 unselectable_text">
-        <ul style="margin-top: 5vw;">
+        <ul style="margin-top: 10vh; margin-bottom: 50vh;"> <!--Longeur page dans le margin bottom -->
+          <!--Projets Personnels-->
           <li style="color: black; margin-left: 2vw;" class="projpers">Projets personnels</li>
           <div class="personnal">
             <!--Annonce-->
             <div>
               <li class="txt_bvn align list_none projpers_files btmtxt_50"
-                style="color: black; margin-top: 5vw; font-weight: 550;">
+                style="color: black; margin-top: 10vh; font-weight: 550;">
                 Bonjour et bienvenue sur mon portfolio.
                 <br>
-                Ci-dessous, vous trouverez quelques créations que j'ai réalisées en 3D via l'application
+                Ci-dessous, vous trouverez quelques-unes de mes créations réalisées en 3D via l'application
                 <a class="" style="font-size: larger; font-weight: 750;" href="https://www.blender.org/"
                   target="_blank">
                   <img src="../files/img/blender.svg" alt="logo-blender" class="projpers_files"
@@ -40,33 +40,54 @@
             </div>
             <!--Rendus-->
             <!--Salon-->
-            <div style="margin-top: 50vh;">
+            <div style="margin-top: 30vh;">
               <div class="btmtxt_15 align">
-                <h1>Salon d'une maison moderne</h1>
-                <p>Salon réalisé à partir de plusieurs anciens projets, avec l'ajout de quelques références
+                <h1 class="projpers_files">Salon d'une maison moderne</h1>
+                <p class="projpers_files">Salon réalisé à partir de plusieurs anciens projets, avec l'ajout de quelques
+                  références
                   culturelles..</p>
-                </div>
-                <div class="image-container projpers_files btmtxt_75">
-                  <img src="../files/img/salon.webp" alt="screen_minecraft" class="folio_img hover_img" 
-                  id="img_vid" style="scale: 0.8;">
-                </div>
               </div>
+              <div class="image-container projpers_files btmtxt_75">
+                <img src="../files/img/salon.webp" alt="screen_minecraft" class="folio_img hover_img" id="img_vid"
+                  style="scale: 0.8;">
+              </div>
+            </div>
+            <!--Requin-->
+            <div style="margin-top: 30vh;">
+              <div class="btmtxt_15 align">
+                <h1 class="projpers_files">Requin et banc de poissons dans la mer</h1>
+                <p class="projpers_files">La scène est déjà assez ancienne, mais à ce moment-là, j'avais vraiment envie</p>
+                <p class="projpers_files">de réaliser un environnement sous-marin.</p>
+              </div>
+              <p class="projpers_files align btmtxt_15">Rendu n°13, plus clair</p>
+              <div class="image-container projpers_files btmtxt_75">
+                <img src="../files/img/underwater_1.jpeg" alt="screen_minecraft" class="folio_img hover_img" id="img_vid"
+                  style="scale: 0.8;">
+              </div>
+              <p class="projpers_files align ">Rendu n°14 et compositing plus foncé, pour donner une impression plus réaliste</p>
+              <p class="projpers_files align btmtxt_15">*Trop sombre selon les écrans et la luminosité</p>
+              <div class="image-container projpers_files btmtxt_75">
+                <img src="../files/img/underwater_2.jpeg" alt="screen_minecraft" class="folio_img hover_img" id="img_vid"
+                  style="scale: 0.8;">
+              </div>
+            </div>
             <!--Backroom-->
             <div style="margin-top: 50vh;">
               <div class="btmtxt_15 align">
-                <h1>Backroom</h1>
-                <p>J'ai eu l'envie de faire une backroom, je me suis fixé 3 heures pour réaliser le projet</p>
-                </div>
-                <div class="image-container projpers_files btmtxt_75">
-                  <img src="../files/img/backroom.jpeg" alt="screen_minecraft" class="folio_img hover_img" 
-                  id="img_vid" style="scale: 0.8;">
-                </div>
+                <h1 class="projpers_files">Backroom</h1>
+                <p class="projpers_files">J'ai eu l'envie de faire une backroom, je me suis fixé 3 heures pour réaliser
+                  le projet</p>
               </div>
+              <div class="image-container projpers_files btmtxt_75">
+                <img src="../files/img/backroom.jpeg" alt="screen_minecraft" class="folio_img hover_img" id="img_vid"
+                  style="scale: 0.8;">
+              </div>
+            </div>
             <!--Porte Torii-->
             <div style="margin-top: 50vh;">
               <div class="btmtxt_15 align">
-                <h1>Porte Torii</h1>
-                <p>Une représentation de la porte Torii.</p>
+                <h1 class="projpers_files">Porte Torii</h1>
+                <p class="projpers_files">Une représentation de la porte Torii.</p>
               </div>
               <div class="image-container projpers_files btmtxt_75">
                 <img src="../files/img/torri.webp" alt="screen_minecraft"
@@ -76,8 +97,8 @@
             <!--Anglais-->
             <div style="margin-top: 50vh;">
               <div class="btmtxt_15 align">
-                <h1>Convoyeur</h1>
-                <p>Une représentation d'un système de convoyeur fantaisiste.</p>
+                <h1 class="projpers_files">Convoyeur</h1>
+                <p class="projpers_files">Une représentation d'un système de convoyeur fantaisiste.</p>
               </div>
               <div style="display: flex; flex-direction: row; justify-content: space-between;">
                 <div style="flex: 1;"> <!-- Colonne gauche -->
@@ -114,11 +135,11 @@
                 </div>
               </div>
             </div>
-             <!--Vidéo de moto -->
-             <div style="margin-top: 50vh;">
+            <!--Vidéo de moto -->
+            <div style="margin-top: 50vh;">
               <div class="btmtxt_15 align">
-                <h1>Essai de reproduction d'une BETA Track 50 RR</h1>
-                <p>Une vidéo montrant le processus de reproduction de cette moto.</p>
+                <h1 class="projpers_files">Essai de reproduction d'une BETA Track 50 RR</h1>
+                <p class="projpers_files">Une vidéo montrant le processus de reproduction de cette moto.</p>
               </div>
               <div class="image-container projpers_files btmtxt_75">
                 <video class="align projpers_files folio_img scale-50 hover_img" src="../files/vid/moto.mp4"
@@ -130,8 +151,9 @@
             <div>
               <div style="margin-top: 50vh;">
                 <div class="btmtxt_15 align">
-                  <h1>Cultivateur agricole</h1>
-                  <p>Modélisation et impression d'un cultivateur agricole pour miniature 1/16.</p>
+                  <h1 class="projpers_files">Cultivateur agricole</h1>
+                  <p class="projpers_files">Modélisation et impression d'un cultivateur agricole pour miniature 1/16.
+                  </p>
                 </div>
                 <div class="projpers_files btmtxt_75">
                   <img src="../files/img/cultivateur_1.webp" alt="screen_minecraft"
@@ -147,9 +169,10 @@
             <div>
               <div style="margin-top: 50vh;">
                 <div class="btmtxt_15 align">
-                  <h1>Station Fantaisiste</h1>
-                  <p>Ce projet consistait à reconstituer un modèle disponible sur Cult3D car le maillage n'était pas propre</p>
-                  <p>et empêchait au client d'imprimer le tout en plusieurs parties</p>
+                  <h1 class="projpers_files">Station Fantaisiste</h1>
+                  <p class="projpers_files">Ce projet consistait à reconstituer un modèle disponible sur Cult3D car le
+                    maillage n'était pas propre</p>
+                  <p class="projpers_files">et empêchait au client d'imprimer le tout en plusieurs parties</p>
                 </div>
                 <div class="projpers_files btmtxt_75">
                   <img src="../files/img/station_1.png" alt="screen_minecraft"
@@ -162,72 +185,77 @@
             <!--Souris-->
             <div class="carousel1">
               <div class="projpers_files"
-              style="background-color: gainsboro; position: absolute; overflow: visible ;width: 100px; height: 100px; margin-block: 15vw; margin-left: 31vw; z-index: 60000!important; border-radius: 2vw; display: flex; justify-content: center; align-items: center; pointer-events: none;  ">
-              <span>Click</span></div>
+                style="background-color: gainsboro; position: absolute; overflow: visible ;width: 100px; height: 100px; margin-block: 15vw; margin-left: 31vw; z-index: 60000!important; border-radius: 2vw; display: flex; justify-content: center; align-items: center; pointer-events: none;  ">
+                <span>Click</span>
+              </div>
               <div style="margin-top: 50vh;">
                 <div class="btmtxt_15 align">
-                  <h1>Souris Verticale</h1>
-                  <p>Modélisation et impression d'une souris verticale</p>
-                  <p>avec 3 boutons supplémentaires</p>
+                  <h1 class="projpers_files">Souris Verticale</h1>
+                  <p class="projpers_files">Modélisation et impression d'une souris verticale</p>
+                  <p class="projpers_files">avec 3 boutons supplémentaires</p>
                 </div>
-              <li class="projpers_files align list_none" style="color: black;">
+                <li class="projpers_files align list_none" style="color: black;">
                 <li class="projpers_files align btmtxt_530 list_none" style="color: black;">
                 </li>
+                </li>
+                <div class="carousel">
+
+                  <img src="../files/img/souris_1.jpg" alt="screen_minecraft"
+                    class="projpers_files folio_img  scale-40 carousel_img" id="img_vid">
+                  <img src="../files/img/souris_2.jpg" alt="screen_minecraft"
+                    class="projpers_files folio_img  scale-40 carousel_img" id="img_vid">
+
+                </div>
+              </div>
+              <!---->
+              <!--HDD-->
+              <div style="margin-top: 50vh;">
+                <div class="btmtxt_15 align">
+                  <h1 class="projpers_files">Rack Disque Dur</h1>
+                  <p class="projpers_files">Adaptateur HDD de taille lecteur DVD avec rack coulissant pour HDD
+                  </p>
+                </div>
+              </div>
+              <li class="projpers_files align btmtxt_70 list_none" style="color: black;">
               </li>
-              <div class="carousel">
-                
-                <img src="../files/img/souris_1.jpg" alt="screen_minecraft"
-                class="projpers_files folio_img  scale-40 carousel_img" id="img_vid">
-                <img src="../files/img/souris_2.jpg" alt="screen_minecraft"
-                class="projpers_files folio_img  scale-40 carousel_img" id="img_vid">
-                
-              </div>
-            </div>
-            <!---->
-            <!--HDD-->
-            <div style="margin-top: 50vh;">
-              <div class="btmtxt_15 align">
-                <h1>Rack Disque Dur</h1>
-                <p>Adaptateur HDD de taille lecteur DVD avec rack coulissant pour HDD
-                </p>
-              </div>
-            </div>
-            <li class="projpers_files align btmtxt_70 list_none" style="color: black;">
-            </li>
-            <img src="../files/img/hdd.jpg" alt="screen_minecraft" class="scale-50 projpers_files folio_img  hover_img "
-              id="img_vid">
+              <img src="../files/img/hdd.jpg" alt="screen_minecraft"
+              class="scale-50 projpers_files folio_img  hover_img " id="img_vid">
+              <img src="../files/img/hdd_2.jpeg" alt="screen_minecraft"
+              class="scale-50 projpers_files folio_img  hover_img " id="img_vid" style="margin-top: -80vh;">
             </div>
             <!--Cochon-->
             <div>
               <div style="margin-top: 50vh;">
                 <div class="btmtxt_15 align">
-                  <h1>Cochon</h1>
-                  <p>Modélisation d'une tirelire cochon sans supports pour un client</p>
+                  <h1 class="projpers_files">Cochon</h1>
+                  <p class="projpers_files">Modélisation d'une tirelire cochon sans supports pour un client</p>
                 </div>
                 <li class="align list_none projpers_files btmtxt_530" style="color: black;">
                 </li>
-                <img src="../files/img/cochon.jpg" alt="screen_minecraft" class="projpers_files folio_img  scale-50 hover_img"
-                  id="img_vid">
+                <img src="../files/img/cochon.jpg" alt="screen_minecraft"
+                  class="projpers_files folio_img  scale-50 hover_img" id="img_vid">
               </div>
             </div>
-              <!--Ourson-->
-              <div>
-                <div style="margin-top: 50vh;">
-                  <div class="btmtxt_15 align">
-                    <h1>Tirelire Ourson</h1>
-                    <p>Modélisation d'une tirelire ourson sans supports pour le même client
-                    </p>
-                  </div>
+            <!--Ourson-->
+            <div>
+              <div style="margin-top: 50vh;">
+                <div class="btmtxt_15 align">
+                  <h1 class="projpers_files">Tirelire Ourson</h1>
+                  <p class="projpers_files">Modélisation d'une tirelire ourson sans supports pour le même client
+                  </p>
                 </div>
-                <img src="../files/img/ourson_1.png" alt="screen_minecraft"
-                  class="projpers_files folio_img  scale-40 hover_img  btmtxt_800" id="img_vid">
-                <img src="../files/img/ourson_2.jpeg" alt="screen_minecraft" class="projpers_files folio_img  scale-40 hover_img "
-                  id="img_vid" style="margin-top: -120vh;">
               </div>
-          <div style="margin-top: 0.5vw;"></div>
+              <img src="../files/img/ourson_1.png" alt="screen_minecraft"
+                class="projpers_files folio_img  scale-40 hover_img  btmtxt_800" id="img_vid">
+              <img src="../files/img/ourson_2.jpeg" alt="screen_minecraft"
+                class="projpers_files folio_img  scale-40 hover_img " id="img_vid" style="margin-top: -120vh;">
+            </div>
+          </div>
+          <div style="margin-top: 0.5vh; margin-top: -148vh;"></div>
+          <!--Projets Personnels-->
           <li style="color: black; margin-left: 2vw;" class="projprof">Projets professionel</li>
           <div class="professional">
-            <div style="width: 100vw ; height:42vw; margin-bottom: 10vw; margin-top: 2vw;">
+            <div style="width: 100vw ; height:95vh; margin-bottom: 10vh; margin-top: 2vh;">
               <iframe src="../files/word/portfolio.pdf" width="80%" height="100%" class="projprof_files folio_pdf"
                 style="margin: auto; display: block;"></iframe>
             </div>
@@ -235,9 +263,8 @@
         </ul>
       </div>
 
-
     </div>
-
+  
     <!--Barre de Navigation du bas-->
     <div id="footer">
     </div>
